# lighter-rust

./: .gitignore  Cargo.toml  PointsBot copy.txt  PointsBot.py  README.md  TODO.md  bot_types.py  last_change.json  requirements.txt  rustfmt.toml
.specstory/history/: 2025-07-07_15-56Z-getting-static-ip-for-hetzner-server.md  2025-07-08_11-52Z-installing-x10-python-trading-library-issues.md  2025-07-08_13-17Z-comparing-cryptographic-function-performance.md  2025-07-08_16-54Z-integrate-order-placement-in-rust.md  2025-07-08_17-53Z-fix-my-current-work.md  2025-07-08_19-22Z-initialize-new-rust-project.md  2025-07-13_17-40Z-steps-to-rewrite-project-in-rust.md  2025-07-13_19-17Z-restructure-rust-project-file-layout.md  2025-07-14_11-32Z-implement-hashing-and-signing-for-orders.md  2025-07-19_22-34Z-hello,-so-i-fetched-the-positions-and-the-data-her.md
api-client/: Cargo.toml
api-client/examples/: close_all_positions.rs  create_limit_order.rs  create_sl_tp.rs  transfer_update_leverage.rs
api-client/src/: lib.rs
crypto/: Cargo.toml
crypto/examples/: test_exports.rs
crypto/src/: scalar_field.rs  schnorr.rs
fetchers/: __init__.py  base.py  extended.py  hyperliquid.py  types.py
ledger/: __init__.py  types.py
lighter-rust/: .gitignore  README.md  env.template
lighter-rust/api-client/examples/: cancel_order.rs  create_market_order.rs  send_orders_10x.rs  simple_test.rs  verify_fixes.rs
lighter-rust/crypto/: Cargo.toml  README.md
lighter-rust/crypto/examples/: test_exports.rs
lighter-rust/crypto/src/: lib.rs  scalar_field.rs  schnorr.rs
lighter-rust/docs/: README.md  api-client.md  architecture.md  examples.md  signer.md
lighter-rust/poseidon-hash/: Cargo.toml  README.md
lighter-rust/poseidon-hash/examples/: test_exports.rs
lighter-rust/poseidon-hash/src/: lib.rs
lighter-rust/signer/: Cargo.toml
lighter-rust/signer-ext/src/: lib.rs  signer.rs
lighter-rust/signer/src/: lib.rs
notes/: TODO.md  helpers.txt
operators/: base.py  extended.py  hyperliquid.py  types.py  utils.py
poseidon-hash/: Cargo.toml
signer-ext/src/: lib.rs  signer.rs
signer/src/: lib.rs
src/: asset_mapping.rs  config.rs  errors.rs  example_extended.json  example_hyperliquid.json  http_client.rs  lib.rs  main.rs  types.rs  utils.rs
src/fetchers/: base.rs  fetch-extended.rs  fetch-hyperliquid.rs  fetch_extended.rs  fetch_hyperliquid.rs  fetch_lighter.rs  mod.rs
src/operators/: base.rs  init_extended_markets.rs  mod.rs  operator-extended.rs  operator-hyperliquid.rs  operator_extended.rs  operator_hyperliquid.rs  operator_lighter.rs
src/operators/utils/: extended_signature.rs  init_extended_markets.rs  mod.rs  starknet_messages.rs
src/utils/: asset_mapping.rs  config.rs  errors.rs  http_client.rs  mod.rs  types.rs  utils.rs
