[package]
name = "points-bot-rs"
version = "0.1.0"
edition = "2021"
description = "Points Bot - Cryptocurrency exchange fetcher and arbitrage bot"
authors = ["Points Bot Team"]
license = "MIT"
keywords = ["cryptocurrency", "trading", "arbitrage", "bot"]
categories = ["finance", "api-bindings"]

[[bin]]
name = "points-bot"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
starknet-crypto = "0.7.4"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.29", features = ["recovery"] }
rmp-serde = "1.1"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
hyperliquid_rust_sdk = "0.6.0"
once_cell = "1.19"
primitive-types = "0.13"
rand = "0.8"