[package]
name = "points_bot_rs"
version = "0.1.0"
edition = "2024"
description = "Fetchers and Operators"
authors = ["rocky"]
license = "MIT"
keywords = ["cryptocurrency", "trading", "arbitrage", "bot"]
categories = ["finance", "api-bindings"]

[[bin]]
name = "points_bot_rs"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
sha2 = "0.10.8"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-crypto = "0.8.1" # `starknet` crate doesn't re-export `PoseidonHasher`
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
hyperliquid_rust_sdk = "0.6.0"
once_cell = "1.19"
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
cron = "0.12"
primitive-types = "0.13"
tokio-cron-scheduler = "0.15.1"


